<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:orientation="vertical">

    <ImageView
        android:onClick="irParaPrimeiraRazao"
        style="@style/SetaParaEsquerda"
        android:contentDescription="@string/seta_esquerda"/>

    <TextView
        android:id="@+id/titulo_segunda_razao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="18dp"
        android:layout_weight="3"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/titulo_segunda_razao"
        android:textSize="22dp" />

    <ImageView
        android:onClick="irParaTerceiraRazao"
        style="@style/SetaParaDireita"
        android:contentDescription="@string/seta_direita" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titulo_segunda_razao">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/cigarro_substancias" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nicotina"
                android:textColor="#523C26"
                android:textSize="30sp" />

            <TextView
                android:layout_marginBottom="16dp"
                android:text="@string/nicotina_texto"
                android:textColor="#523C26"
                style="@style/ConteudoStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metais_pesados"
                android:textColor="#8F2A1A"
                android:textSize="30sp" />

            <TextView
                android:layout_marginBottom="16dp"
                android:text="@string/metais_pesados_texto"
                android:textColor="#8F2A1A"
                style="@style/ConteudoStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alcatrao"
                android:textColor="#D66E0C"
                android:textSize="30sp" />

            <TextView
                android:layout_marginBottom="16dp"
                android:text="@string/alcatrao_texto"
                android:textColor="#D66E0C"
                style="@style/ConteudoStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monoxido_de_carbono"
                android:textColor="#96847F"
                android:textSize="30sp" />

            <TextView
                android:text="@string/monoxido_de_carbono_texto"
                android:textColor="#96847F"
                style="@style/ConteudoStyle" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>