<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:orientation="vertical">

    <ImageView
        android:onClick="irParaQuartaRazao"
        style="@style/SetaParaEsquerda"
        android:contentDescription="@string/seta_esquerda" />

    <TextView
        android:id="@+id/titulo_quinta_razao"
        android:text="@string/titulo_quinta_razao"
        style="@style/TituloStyle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:onClick="irParaPaginaPrincipal"
        android:src="@drawable/icon_retorno"
        android:contentDescription="@string/retornar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titulo_quinta_razao"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/primeiros_dias"
                style="@style/TituloComFundo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#8bc34a"
                android:gravity="center"
                android:text="@string/oxigenio_extra"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/energia" />

                <TextView
                    android:text="@string/oxigenio_extra_conteudo"
                    style="@style/ConteudoStyle"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="8dp"
                android:background="#0091ea"
                android:gravity="center"
                android:text="@string/pulmoes_muco"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/muco" />

                <TextView
                    android:text="@string/pulmoes_muco_conteudo"
                    style="@style/ConteudoStyle" />
            </LinearLayout>

            <TextView
                android:text="@string/primeiro_mes"
                style="@style/TituloComFundo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#7b1fa2"
                android:gravity="center"
                android:text="@string/abstinencia"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/abstinencia" />

                <TextView
                    android:text="@string/abstinencia_conteudo"
                    style="@style/ConteudoStyle" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#8bc34a"
                android:gravity="center"
                android:text="@string/paladar_apurado"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/lingua" />

                <TextView
                    android:text="@string/paladar_apurado_conteudo"
                    style="@style/ConteudoStyle" />
            </LinearLayout>

            <TextView
                android:text="@string/em_ate_5_anos"
                style="@style/TituloComFundo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#00796b"
                android:gravity="center"
                android:text="@string/menor_risco_derrame"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/cabeca_pensando" />

                <TextView
                    android:text="@string/menor_risco_derrame_conteudo"
                    style="@style/ConteudoStyle" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#b71c1c"
                android:gravity="center"
                android:text="@string/peito_blindado"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/coracao_blindado" />

                <TextView
                    android:text="@string/peito_blindado_conteudo"
                    style="@style/ConteudoStyle" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>