<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    tools:context="com.example.android.cincocoisas.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/corpo_humano"
        android:scaleType="centerCrop"
        android:src="@drawable/corpo_humano" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="5"
            android:textSize="100sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/titulo_main"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageView
        android:onClick="irParaPrimeiraRazao"
        style="@style/SetaParaDireita"
        android:contentDescription="@string/seta_direita" />

</RelativeLayout>
